Create git ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.idea
+# Intellij IDEA files
 *.iml
-*/*.iml
+**/*.iml
+.idea
+**/.idea
+
+# Compiled binaries
+target
+**/target
+**/bin
+
+# junk
+.DS_Store
